--- a/data/config.conf
+++ b/data/config.conf
@@ -1,5 +1,5 @@
-component_name="axon"
-component_no=2
+component_name="dendrite"
+component_no=3
 brain_name=17302
 cell_type="CPU"
 swc_prefix="/home/penglab/Documents/SEUAllenJointDataCenter/finished_annotations/17302_Finished_Neurons/17302_"
